<resources>
    <string name="app_name">Tic&amp;Tache</string>
    <string name="loginUserTitle">Username</string>
    <string name="loginPassTitle">Password</string>
    <string name="loginSignInTitle">Sign In</string>
    <string name="loginNoAccountTitle">Create new account ?</string>
    <string name="loginSignUpTitle">Sign Up</string>
    <string name="signUpNameHint">Name</string>
    <string name="signUpUserNameHint">Username</string>
    <string name="signUpPasswordHint">Password</string>
    <string name="signUpEmailHint">Email</string>
    <string name="signUpBtnSubmit">Submit</string>
    <string name="menu_todolist">Todo Lists</string>
    <string name="menu_exit">Exit</string>
    <string name="todoListItemsEmptyMessage">Empty Todo List Items</string>
    <string name="todoListItemStatusContinue">In Progress</string>
    <string name="todoListItemStatusCompleted">Completed</string>
    <string name="todoListItemStatusExpired">Expired</string>
    <string name="todoListEmptyMessage">Empty Todo List</string>
    <string name="todoListItemDialogHeaderNewItem">Create Todo List Item</string>
    <string name="todoListItemDialogName">List Item Name</string>
    <string name="todoListItemDialogDeadline">List Item Deadline</string>
    <string name="todoListItemDialogDescription">List Item Description</string>
    <string name="todoListItemDialogSubmitNew">Create</string>
    <string name="todoListItemDialogClose">Close</string>
    <string name="todoListDialogHeaderCreate">Create Todo List</string>
    <string name="todoListDialogName">List Name</string>
    <string name="todoListDialogPriority">List Priority</string>
    <string name="todoListItemDelete">Delete</string>
    <string name="todoListItemUpdate">Update</string>
    <string name="todoListItemComplete">Complete</string>
    <string name="todoListFilterStatus">Status</string>
    <string name="todoListFilterCompleted">Completed</string>
    <string name="todoListFilterContinued">In Progress</string>
    <string name="todoListFilterExpired">Expired</string>
    <string name="todolistShareBottomSheetPreview">PDF Preview</string>
    <string name="todolistShareBottomSheetEmail">Send Email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="todoListItemCreateDate">Create Date: %1s</string>
    <string name="todoListItemDesc">Description: %1s</string>
    <string name="todoListItemRemainingDate">%1s days left.</string>
    <string name="todoListItemOneRemainingDate">%1s day left.</string>
    <string name="todoListItemDelayDate">%1s days delay.</string>
    <string name="todoListItemOneDelayDate">%1s day delay.</string>
    <string name="todoListItemTodayDate">Today.</string>
    <string name="search">Search</string>
    <string name="todoListMoreUpdate">Update</string>
    <string name="todoListMoreDelete">Delete</string>
    <string name="todoListMoreShare">Share</string>
    <string name="todoListPageTitle">Hi, %1s</string>
    <string name="todoListPageSubTitle">welcome to To Do List</string>
    <string name="todoListPriorityLow">Low</string>
    <string name="todoListPriorityNormal">Normal</string>
    <string name="todoListPriorityHigh">High</string>
    <string name="todoListDialogHeaderUpdate">Update Todo List</string>
    <string name="todoListItemDialogSubmitUpdate">Update</string>
    <string name="todolistAddListNameError">Please Fill the List Name !</string>
    <string name="todoListUpdateMessage">Todo List is update.</string>
    <string name="todoListCreateMessage">Todo is create</string>
    <string name="todoListPriority">Priority</string>
    <string name="todoListSearch">Search TodoList...</string>
    <string name="todoListDeleteMessage">Todo List is deleted</string>
    <string name="todoListItemDialogHeaderUpdateItem">Update Todo List Item</string>
    <string name="todolistAddListItemNameError">Please fill the List Item Name</string>
    <string name="todolistAddListItemDescError">Please fill the List Description Name</string>
    <string name="todoListItemUpdateMessage">Todo List Item is update</string>
    <string name="todoListItemCreateMessage">Todo List Item is create</string>
    <string name="todoListItemEndTask">Todo List Item Task Finished</string>
    <string name="todoListItemEndTaskMessage">Are you sure want to finish item status?</string>
    <string name="YES">Yes</string>
    <string name="todoListItemStatusMessage">Todo List Item is finish.</string>
    <string name="CANCEL">Cancel</string>
    <string name="todoListItemDeleteTask">Todo List Item Deleted</string>
    <string name="todoListItemDeleteTaskMessage">Do you want to delete Todo List Item?</string>
    <string name="todoListItemDeleteMessage">Todo List Item is deleted.</string>
    <string name="text_inside_circle_button_text_normal">Text normal</string>
    <string name="text_outside_circle_button_text_normal">text normal outside</string>
    <string name="text_ham_button_text_normal">ham text</string>
    <string name="text_ham_button_sub_text_normal">ham subtext</string>
    <string name="filterDesactivated">Desactivated</string>
    <string name="filterActivated">Activated</string>
    <string name="reset">Reset</string>
</resources>