<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="#F7F7F7"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:text="@string/todoListDialogHeaderCreate"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/green_500" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/todoListDialogName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#666666" />

                <EditText
                    android:id="@+id/etListName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_round_background"
                    android:maxLines="1"
                    android:minHeight="40dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/todoListDialogPriority"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#666666" />

                <EditText
                    android:id="@+id/etPriority"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_round_background"
                    android:drawableEnd="@drawable/ic_expand_arrow"
                    android:drawableRight="@drawable/ic_expand_arrow"
                    android:focusable="false"
                    android:minHeight="40dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/todoListItemDialogSubmitNew" />


                <TextView
                    android:id="@+id/buttonClose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/todoListItemDialogClose"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>