<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/green_500" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="false"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@mipmap/unzero" />




        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/loginSignInTitle"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="visible"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp">

                <ScrollView
                    android:id="@+id/scroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:orientation="vertical"
                        android:padding="20dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loginUserTitle"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etUserName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-4dp"
                                android:layout_marginRight="-4dp"
                                android:inputType="text"
                                android:maxLength="50"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="@color/green_500"
                                android:textStyle="bold"
                                android:theme="@color/grey_40" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <View
                            android:layout_width="0dp"
                            android:layout_height="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loginPassTitle"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-4dp"
                                android:layout_marginRight="-4dp"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="@color/green_500"
                                android:textStyle="bold"
                                android:theme="@color/grey_40" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="20dp" />

                        <Button
                            android:id="@+id/btnSignIn"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:background="@drawable/btn_rounded_primary"
                            android:text="@string/loginSignInTitle"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/loginNoAccountTitle"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                                android:textColor="@color/grey_40" />

                            <TextView
                                android:id="@+id/tvSignUp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3dp"
                                android:layout_marginLeft="3dp"
                                android:clickable="true"
                                android:text="@string/loginSignUpTitle"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                                android:textColor="@color/green_500"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>
            </androidx.cardview.widget.CardView>


            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

        </LinearLayout>
    </RelativeLayout>


</ScrollView>
